--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,7 +1,54 @@
+:root {
+  background: purple;
+}
+
 html {
   max-width: 720px;
+  background: blue;
 }
 
 body {
-  background: #fff;
+  background: rgb(238, 242, 215);
+}
+
+* {
+  color: yellow;
+}
+
+h1 {
+  color: green;
+}
+
+.box {
+  background: rgb(209, 206, 206);
+}
+
+#user, .user {
+  color: red;
+}
+
+h1, h2, button, h3#user {
+  color: green;
+}
+
+.button {
+  background: red;
+  color: black;
+}
+
+section > p {
+  color: magenta;
+}
+
+footer em {
+  color: orange;
+}
+
+footer > h1 + em {
+  background: black;
+}
+
+h1 ~ p,
+h1 ~ * > p {
+  background: black;
 }
