--- a/src/container/index.hbs
+++ b/src/container/index.hbs
@@ -1,15 +1,32 @@
-{{!-- 
-Це код container файлу для index сторінки, 
+{{!--
+Це код container файлу для index сторінки,
 в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/"
- --}}
-
-<div class="p-5">
-    <h1>USB хаб Type C 12 в 1 HDMI VGA AUX 3.5 mm</h1>
-
-    <button type="button" class="btn btn-primary">Купити</button>
-</div>
-
-{{!-- 
-    Цей код містить лише те, що буде виводитись в <body>
-    Адже наш layout/default.hbs має вже структуру HTML
 --}}
+
+<section class="p-5 box">
+    <h1>USB хаб Type C 12 в 1 HDMI VGA AUX 3.5 mm</h1>
+    Тут має бути якийсь текст
+    <h2>USB хаб Type C 12 в 1 HDMI VGA AUX 3.5 mm</h2>
+    <h3>USB хаб Type C 12 в 1 HDMI VGA AUX 3.5 mm</h3>
+
+    <button type="button" class="button">Купити</button>
+
+    <div>
+        <p>This is another text</p>
+    </div>
+</section>
+
+<footer class="p-5">
+    <h1>USB хаб Type C 12 в 1 HDMI VGA AUX 3.5 mm</h1>
+    <em>RESUME</em>
+    <p class="user">
+        <em>This is another text</em>
+    </p>
+</footer>
+
+{{!--
+Цей код містить лише те, що буде виводитись в
+
+<body>
+    Адже наш layout/default.hbs має вже структуру HTML
+    --}}
